--- a/src/components/CountriesList/index.scss
+++ b/src/components/CountriesList/index.scss
@@ -5,5 +5,36 @@
         font-weight: 600;
         font-style: italic;
         color: blue;
+        text-align: center;
     
+}
+.country{
+display: grid;
+grid-template-columns: repeat(4, 1fr);
+gap: 20px;
+padding: 10px;
+@include tablet{
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+}
+@include mobile{
+    grid-template-columns: 1fr;
+}
+}
+.country_img{
+    display: block;
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    object-position: center;
+    @include tablet{
+        height: 150px;
+        object-fit: none;
+    }
+    @include mobile {
+        height: 120px;
+       
+     
+    }
+   
 }
