--- a/src/pages/CountriesList/index.scss
+++ b/src/pages/CountriesList/index.scss
@@ -13,6 +13,8 @@ display: grid;
 grid-template-columns: repeat(4, 1fr);
 gap: 20px;
 padding: 10px;
+
+
 @include tablet{
     grid-template-columns: repeat(3, 1fr);
     gap: 15px;
@@ -21,20 +23,37 @@ padding: 10px;
     grid-template-columns: 1fr;
 }
 }
+// .country:hover{
+//     transform: scale(1.3);
+// }
 .country_img{
     display: block;
     width: 100%;
     height: 180px;
     object-fit: cover;
     object-position: center;
+    border-radius: 25px;
     @include tablet{
         height: 150px;
         object-fit: none;
+        border-radius: 20px;
+        object-position: center;
     }
     @include mobile {
         height: 120px;
-       
+        border-radius: 15px;
      
     }
    
+}
+.country_img:hover{
+transform: scale(1.1);
+}
+
+.country_card{
+border-radius: 25px;
+
+}
+.country_card:hover{
+    box-shadow: rgba( 245, 245, 245, 0.2) 0 0 8px;
 }
