--- a/src/pages/CountriesList/index.scss
+++ b/src/pages/CountriesList/index.scss
@@ -1,59 +1,52 @@
 @use "../../scss/" as *;
 
-.country_title{
-    
-        font-weight: 600;
-        font-style: italic;
-        color: blue;
-        text-align: center;
-    
+.country_title {
+  font-weight: 600;
+  font-style: italic;
+  text-align: center;
+  color: black;
 }
-.country{
-display: grid;
-grid-template-columns: repeat(4, 1fr);
-gap: 20px;
-padding: 10px;
+.country {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  padding: 10px;
+  margin-top: 20px;
 
-
-@include tablet{
+  @include tablet {
     grid-template-columns: repeat(3, 1fr);
     gap: 15px;
-}
-@include mobile{
+  }
+  @include mobile {
     grid-template-columns: 1fr;
+  }
 }
-}
-// .country:hover{
-//     transform: scale(1.3);
-// }
-.country_img{
-    display: block;
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
+
+.country_img {
+  display: block;
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 25px;
+  @include tablet {
+    height: 150px;
+    object-fit: none;
+    border-radius: 20px;
     object-position: center;
-    border-radius: 25px;
-    @include tablet{
-        height: 150px;
-        object-fit: none;
-        border-radius: 20px;
-        object-position: center;
-    }
-    @include mobile {
-        height: 120px;
-        border-radius: 15px;
-     
-    }
-   
+  }
+  @include mobile {
+    height: 120px;
+    border-radius: 15px;
+  }
 }
-.country_img:hover{
-transform: scale(1.1);
+.country_img:hover {
+  transform: scale(1.1);
 }
 
-.country_card{
-border-radius: 25px;
-
+.country_card {
+  border-radius: 25px;
 }
-.country_card:hover{
-    box-shadow: rgba( 245, 245, 245, 0.2) 0 0 8px;
+.country_card:hover {
+  box-shadow: rgba(245, 245, 245, 0.2) 0 0 8px;
 }
