--- a/src/components/Search/index.scss
+++ b/src/components/Search/index.scss
@@ -8,8 +8,11 @@
   padding: 5px;
   border-radius: 20px;
   margin-top: 20px;
+  width: 200px;
 }
-
+.search_container {
+  position: relative;
+}
 .search:focus {
   border: 3px solid #555;
 }
@@ -17,4 +20,12 @@ input {
   outline: none;
   border: none;
   background-color: transparent;
+}
+.search_countries {
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 200px;
+  background-color: red;
+  top: 0;
 }
